Added basic html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <title>World clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select name="#">
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Stockholm</option>
+      </select>
+      <div class="city">
+        <div>
+          <h2>Los Angeles 🇺🇸</h2>
+          <div class="date">Aug 26th 2024</div>
+        </div>
+        <div class="time">7:32:15 PM</div>
+      </div>
+      <div class="city">
+        <div>
+          <h2>Toronto 🇨🇦</h2>
+          <div class="date">Aug 26th 2024</div>
+        </div>
+        <div class="time">10:32:15 PM</div>
+      </div>
+    </div>
     <footer>
       This project was coded by Sandra Domeikiene & is
       <a
