Added css formatting

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
           <h2>Los Angeles 🇺🇸</h2>
           <div class="date">Aug 26th 2024</div>
         </div>
-        <div class="time">7:32:15 PM</div>
+        <div class="time">7:32:15<small> PM</small></div>
       </div>
       <div class="city">
         <div>
           <h2>Toronto 🇨🇦</h2>
           <div class="date">Aug 26th 2024</div>
         </div>
-        <div class="time">10:32:15 PM</div>
+        <div class="time">10:32:15<small> PM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Sandra Domeikiene & is
+      This project was coded by <strong>Sandra Domeikiene</strong> & is
       <a
         href="https://github.com/sanddot/world-clock-search-by-city"
         target="_blank"
