--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World clock</title>
   </head>
   <body>
@@ -15,19 +17,19 @@
         <option value="">New York</option>
         <option value="">Stockholm</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">Aug 26th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">7:32:15<small> PM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="toronto">
         <div>
           <h2>Toronto 🇨🇦</h2>
-          <div class="date">Aug 26th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">10:32:15<small> PM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
