--- a/index.html
+++ b/index.html
@@ -11,25 +11,28 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select name="#">
+      <select name="#" id="city">
         <option value="">Select a city</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Stockholm</option>
+        <option value="Europe/Paris">Paris 🇫🇷</option>
+        <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
+        <option value="America/New_York">New York 🇺🇸</option>
+        <option value="Europe/Stockholm">Stockholm 🇸🇪</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="toronto">
-        <div>
-          <h2>Toronto 🇨🇦</h2>
-          <div class="date"></div>
+        <div class="city" id="toronto">
+          <div>
+            <h2>Toronto 🇨🇦</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
