Added current time zone

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>World Clock</h1>
       <select name="#" id="city">
         <option value="">Select a city</option>
+        <option value="current">My current location</option>
         <option value="Europe/Paris">Paris 🇫🇷</option>
         <option value="Asia/Tokyo">Tokyo 🇯🇵</option>
         <option value="America/New_York">New York 🇺🇸</option>
