--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
           </div>
           <div class="time"></div>
         </div>
+        <div class="city" id="amsterdam">
+          <div>
+            <h2>Amsterdam 🇳🇱</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
     </div>
     <footer>
